made list more generic